--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "3.0.4",
     "@sanity/client": "6.1.7",
     "@sanity/image-url": "1.0.2",
@@ -22,6 +27,7 @@
     "@vercel/og": "0.5.8",
     "classnames": "2.3.2",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.8.3",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "13.4.9",
     "next-sanity": "5.1.0",
