--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "3.0.4",
     "@sanity/client": "6.1.7",
+    "@sanity/icons": "^2.4.1",
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.14.1",
     "@vercel/og": "0.5.8",
@@ -34,8 +35,10 @@
     "next-sanity-image": "6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "sanity": "3.14.1",
     "sanity-plugin-asset-source-unsplash": "1.1.0",
+    "styled-components": "^5.3.11",
     "suspend-react": "0.1.3",
     "swr": "2.2.0"
   },
