--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "3.0.4",
+    "@react-google-maps/api": "^2.19.2",
     "@sanity/client": "6.1.7",
     "@sanity/icons": "^2.4.1",
     "@sanity/image-url": "1.0.2",
@@ -31,13 +32,17 @@
     "framer-motion": "^10.8.3",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "13.4.9",
+    "next-auth": "^4.22.3",
     "next-sanity": "5.1.0",
     "next-sanity-image": "6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
     "sanity": "3.14.1",
     "sanity-plugin-asset-source-unsplash": "1.1.0",
+    "slugify": "^1.6.6",
     "styled-components": "^5.3.11",
     "suspend-react": "0.1.3",
     "swr": "2.2.0"
