--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.14.1",
     "@vercel/og": "0.5.8",
+    "axios": "^1.4.0",
     "classnames": "2.3.2",
     "date-fns": "^2.30.0",
+    "formidable": "^3.5.0",
     "framer-motion": "^10.8.3",
+    "fs": "^0.0.1-security",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
@@ -42,6 +45,7 @@
     "react-multi-carousel": "^2.8.4",
     "sanity": "3.14.1",
     "sanity-plugin-asset-source-unsplash": "1.1.0",
+    "sanity-plugin-media": "^2.2.2",
     "slugify": "^1.6.6",
     "styled-components": "^5.3.11",
     "suspend-react": "0.1.3",
