--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.14.1",
     "@vercel/og": "0.5.8",
+    "argon2": "^0.31.0",
     "classnames": "2.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.8.3",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
+    "next-auth-sanity": "^1.5.2",
     "next-sanity": "5.1.0",
     "next-sanity-image": "6.1.0",
     "react": "^18.2.0",
