--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "next-auth-sanity": "^1.5.2",
     "next-sanity": "5.1.0",
     "next-sanity-image": "6.1.0",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
