--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-packagejson": "^2.4.3",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
