--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.5",
     "@portabletext/react": "3.0.4",
     "@react-google-maps/api": "^2.19.2",
     "@sanity/client": "6.1.7",
@@ -28,10 +31,12 @@
     "@sanity/vision": "3.14.1",
     "@vercel/og": "0.5.8",
     "argon2": "^0.31.0",
+    "axios": "^1.4.0",
     "classnames": "2.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.8.3",
     "intl-segmenter-polyfill": "0.4.4",
+    "lodash": "^4.17.21",
     "next": "13.4.9",
     "next-auth": "^4.22.3",
     "next-auth-sanity": "^1.5.2",
