--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vercel/og": "0.5.8",
     "argon2": "^0.31.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "classnames": "2.3.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.8.3",
@@ -44,6 +45,7 @@
     "next-sanity-image": "6.1.0",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.2",
